# django-autogfk

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
example/: README.md  manage.py  requirements.txt
example/example_project/: asgi.py  settings.py  urls.py
example/exampleapp/: admin.py  apps.py  models.py
example/exampleapp/migrations/: 0001_initial.py
src/autogfk/: __init__.py  admin.py  apps.py  fields.py  forms.py  inlines.py  managers.py  polymorphic.py  query.py  urls.py  views.py  widgets.py
src/autogfk/models/: __init__.py  base.py  polymorphic.py
src/autogfk/static/autogfk/: autogfk.css  autogfk.js
src/autogfk/templates/autogfk/widgets/: autogfk.html
tests/: conftest.py  settings.py  test_autogfk.py  urls.py
tests/testapp/: apps.py  models.py
