[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-autogfk"
version = "0.4.1"
description = "AutoGenericForeignKey: Admin-friendly GenericForeignKey with Select2 autocomplete for Django."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name="Sandro Salles" }]
keywords = ["django", "admin", "genericforeignkey", "contenttypes", "select2", "autocomplete"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/sandro-salles/django-autogfk"
Repository = "https://github.com/sandro-salles/django-autogfk"
Issues = "https://github.com/sandro-salles/django-autogfk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autogfk = [
  "static/autogfk/*",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
addopts = "-q"
